# Total-DataChallenge

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py
app/api/: __init__.py
app/core/: __init__.py
database/: __init__.py
models/: __init__.py
pipeline/: __init__.py
pipeline/etl/: __init__.py  class_catalog.py  cli.py  config.py  etl_pipeline.py
pipeline/etl/extractor/: __init__.py  core.py  data_models.py  sources.py  validators.py  writer.py
pipeline/etl/timestamp_ocr/: __init__.py  camera_profiles.py  core.py  data_models.py  parser.py  trocr_engine.py
pipeline/etl/transform/: __init__.py  dataframe_builder.py  deduplicator.py  filename_parser.py
pipeline/etl/validation/: __init__.py  core.py  data_models.py  rules.py
tests/: __init__.py
tests/unit/etl/: conftest.py  test_class_catalog.py  test_cli.py  test_etl_pipeline.py
tests/unit/etl/extractor/: conftest.py  test_data_models.py  test_extractor.py  test_sources.py  test_validators.py  test_writer.py
tests/unit/etl/timestamp_ocr/: conftest.py  test_camera_profiles.py  test_timestamp_extractor.py  test_timestamp_parser.py
tests/unit/etl/transform/: conftest.py  test_dataframe_builder.py  test_deduplicator_temporal.py  test_filename_parser.py
utils/: logging_system.py  types.py
